--- a/tkom/package.json
+++ b/tkom/package.json
@@ -15,6 +15,11 @@
             "language": "tkom",
             "scopeName": "source.tkom",
             "path": "./syntaxes/tkom.tmLanguage"
+        }],
+        "themes": [{
+            "label": "tkom-lang",
+            "uiTheme": "vs-dark",
+            "path": "./themes/tkom.tmTheme"
         }]
     }
 }
