--- a/Translator/src/CMakeLists.txt
+++ b/Translator/src/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_executable(Translator main.cpp Lexer/Lexer.cpp Lexer/Token.cpp ../include/Lexer/Characters.h Lexer/Characters.cpp)
+add_executable(Translator
+        main.cpp
+        Lexer/Lexer.cpp
+        Lexer/Token.cpp
+        Lexer/Characters.cpp
+        Parser/Parser.cpp
+        Parser/Tree.cpp Parser/Nodes.cpp)
