Logger class added

--- a/Translator/src/CMakeLists.txt
+++ b/Translator/src/CMakeLists.txt
@@ -4,4 +4,4 @@ add_executable(Translator
         Lexer/Token.cpp
         Lexer/Characters.cpp
         Parser/Parser.cpp
-        Parser/Tree.cpp Parser/Nodes.cpp ../include/Source.h Source.cpp ../include/Lexer/Exceptions.h Lexer/Exceptions.cpp ../include/Parser/Scope.h Parser/Scope.cpp ../include/Parser/Exceptions.h Parser/Exceptions.cpp)
+        Parser/Tree.cpp Parser/Nodes.cpp ../include/Source.h Source.cpp ../include/Lexer/Exceptions.h Lexer/Exceptions.cpp ../include/Parser/Scope.h Parser/Scope.cpp ../include/Parser/Exceptions.h Parser/Exceptions.cpp ../include/Logger/Logger.h Logger/Logger.cpp)
