--- a/Translator/CMakeLists.txt
+++ b/Translator/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.9)
 project(Translator)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -Wall -std=c++17")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -04 -m66 -std=c++17")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -std=c++17")
 
 set(CMAKE_CXX_COMPILER /usr/bin/g++-7)
 
@@ -13,10 +14,10 @@ add_subdirectory(src)
 
 set_target_properties( Translator
         PROPERTIES
-        ARCHIVE_OUTPUT_DIRECTORY_DEBUG "build/debug/lib"
-        LIBRARY_OUTPUT_DIRECTORY_DEBUG "build/debug/lib"
-        RUNTIME_OUTPUT_DIRECTORY_DEBUG "build/debug/bin"
-        ARCHIVE_OUTPUT_DIRECTORY_RELEASE "build/release/lib"
-        LIBRARY_OUTPUT_DIRECTORY_RELEASE "build/release/lib"
-        RUNTIME_OUTPUT_DIRECTORY_RELEASE "build/release/bin"
+        ARCHIVE_OUTPUT_DIRECTORY_DEBUG "debug/lib"
+        LIBRARY_OUTPUT_DIRECTORY_DEBUG "debug/lib"
+        RUNTIME_OUTPUT_DIRECTORY_DEBUG "debug/bin"
+        ARCHIVE_OUTPUT_DIRECTORY_RELEASE "release/lib"
+        LIBRARY_OUTPUT_DIRECTORY_RELEASE "release/lib"
+        RUNTIME_OUTPUT_DIRECTORY_RELEASE "release/bin"
         )
